V 
* features
- 
* bug fixes
-

V 2.3.2 
* features
- 
* bug fixes
- fix crash on start

V 2.3.1
* features
-
* bug fixes
- fixed crash on start bug (finally and hopefully)
- German translation update
- Italian translation update

V 2.3.0
* features
- handle multicore devices (beta feature)
* bug fixes
- autoload configuration does not get saved

V 2.2.3 
* features
- 
* bug fixes
- fix forcecloses

V 2.2.2
* features
- autoload based on weekdays 
- delete autoload configurations
- fix trigger list layout with long profile names
* bug fixes
- fix force close in autoload editor

V 2.2.1
* features
- 
* bug fixes
- really do exact scheduling
- fix profile editor layout
- fixed force close in autoload editor 

V 2.2.0
* features
- time-specific configurations (autoloading configurations)
- backup/restore settings to cloud
- log profile and configuration switching
* bug fixes
-

V 2.1.3
* features
- 
* bug fixes
- give the smartass governor a max frequency slider back

V 2.1.2
* features
- basic help page for configurations
* bug fixes
- some devices seem the need the vibrate permission .oO(strange...)
- prevent errors while switching profiles

V 2.1.1
* features
- 
* bug fixes
- disable debug mode

V 2.1.0
* features
- configurations: backup/restore
- switch airplane mode (the ultimate battery saver - wait for 2.2 then it will make more sense)
* bug fixes
-

V 2.0.7
* features
- 
* bug fixes
- fix force close

V 2.0.6
* features
- 
* bug fixes
- fix forceclose

V 2.0.5
* features
- fix capability check to honor thresholds
- capability check: help page and remove e-mail address 
- help pages for settings
* bug fixes
-

V 2.0.4
* features
- Show battery info when clicking on power information (hidden feature)
* bug fixes
- fix force close

V 2.0.3
* features
- GUI cleanup
- colorise current virtual governor
* bug fixes
- fix wrong virtual governor bug

V 2.0.2
* features
- context sensitive help
- help update 
- manage back button in help
* bug fixes
-

V 2.0.1