@@ -1,6 +1,7 @@
 - Fix allow manual service changes
 
 - disable cores: echo 0 >> /sys/devices/system/cpu/cpu1/online
+- update docu for script clarify root
 
 - handle two configuration have the same name
 
