@@ -4,6 +4,12 @@ V
 * bug fixes
 -
 
+V 
+* features
+- 
+* bug fixes
+- Greek translation
+
 V 2.3.2 
 * features
 - 
